# RacePlex

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  track_submission.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  deploy-beta-proxy.yml  deploy-pages.yml  lint.yml  test.yml  tracks.yml  typecheck.yml
.lovable/: plan.md
beta-proxy/: README.md  package.json  wrangler.toml
beta-proxy/src/: index.ts
docs/: android.md  backend.md  ble-protocol.md  ble.md  i18n.md  subsystems.md
docs/plans/: 0000-multi-lap-overlay.md  0002-firmware-sdcard-ota.md  0005-leaderboards.md  (+16 more)
public/: _headers  drawings.json  llms.txt  robots.txt  sitemap.xml  sw.js  tracks.json
scripts/: build-tracks.mjs  build-xrk-wasm.sh  build-xrk-wheel.sh  coverage-badge.mjs  coverage-summary.mjs  i18n-glossary.json  resolveSupabaseBranch.test.ts  resolveSupabaseBranch.ts  screenshots.mjs  seed-translations.mjs  tracks-format.mjs  tracks-validate.d.mts  tracks-validate.mjs  tracks.test.ts  verify-import.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: config.toml
tracks/: orlando-kart-center.json
xrk-wasm/: .gitignore  Cargo.toml
xrk-wasm/src/: lib.rs
(+842 files in other folders)
